<resources>
    <string name="app_name">Foodies</string>
    <string name="foodies_name">Foodies</string>
    <string name="simpleline_name">Simple mobile application for Drexel.</string>
    <string name="or_text">or</string>
    <string name="textview_email">Email</string>
    <string name="textview_password">Password</string>
    <string name="textview_register">Register</string>
    <string name="textview_forgetpassword">I have forgotten my password.</string>
    <string name="title_activity_main_vendor_screen">MainVendorScreen</string>
    <string name="user_name">User Name</string>
    <string name="payment_method">Balance</string>
    <string name="button_editMenu">Edit Menu</string>
    <string name="button_logout">Logout</string>
    <string name="button_editLocation">Edit Location</string>
    <string name="button_orders">Orders</string>
    <string name="button_reviews">Reviews</string>
    <string name="thumbnail">thumbnail</string>
    <string name="order">order</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_maps">Maps</string>'
    <string name="google_maps_key">AIzaSyBOGpTik5HySjuGnY_31zJgQbrjyBaG9kU</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
