<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_log_in_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kpos7.loginscreen.LogInScreen">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="200sp"
            android:layout_height="120sp"
            android:layout_marginLeft="10sp"
            android:src="@drawable/logo"
            android:id="@+id/imageView"/>
        <TextView android:id="@+id/chatt_text"
            android:gravity="center"
            android:layout_marginTop="-10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/foodies_name"
            />
        <TextView android:id="@+id/chatt2_text"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/simpleline_name"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="60sp">

        <TableRow>
            <ImageButton
                android:id="@+id/facebook_btn"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/facebook"
                />

            <ImageButton
                android:id="@+id/twitter_btn"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:background="@drawable/twitter"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/or_text"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/or_text"
            />
    </LinearLayout>
    <TableLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:id="@+id/username"
                android:layout_marginLeft="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_email"
                />
            <EditText android:id="@+id/usernameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/password"
                android:layout_marginLeft="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_password"
                />
            <EditText android:id ="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword"
                />
        </TableRow>
        <LinearLayout
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/loginBtn"
                android:layout_width="160sp"
                android:layout_height="55sp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login"
                />
            <TextView android:id="@+id/login_text"
                android:gravity="center"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_register"
                />
            <TextView android:id="@+id/forgotpassword_text"
                android:gravity="center"
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_forgetpassword"
                />
        </LinearLayout>
    </TableLayout>
</LinearLayout>
